Added the 'Hide limits from server owners' option to the reseller page, which prevents his customers from seeing the reseller's limits (although they are still enforced). Also updated the create-reseller.pl and modify-reseller.pl programs to all --hide options.
Added caching to make lookups of domains by parent and user faster.
Added tabs and more help text to the Script Installers page.
Added several new initial website content styles, such as Refresh, Dreamy, Rounded and Integral. All of these create multiple pages which can then be easily edited with the Edit Web Pages feature.
Added a button to the Edit Web Pages page to replace existing content with that generated from a style. Also added the --style option to modify-web.pl.
---- Changes since 3.37 ----
Removed old versions from the PHPmyAdmin script installer.
Updated the Drupal script installer to support version 5.1, and all the Horde scripts to their latest versions.
Don't allow extra admins to switch to the domain owner.
Added a page for installing third-party content styles, which can then be used for new websites exactly like the built-in styles.
When configuring email notification for new mailboxes, resellers and domains, you can now enter a Bcc address as well as a Cc address.
Split the Edit Virtual Server page into more sections.
Improved the IntegraMod and dotProject script installers to configure the database connection automatically.
Moved options for sending email to new and updated mailboxes from the Module Config page to the form for editing the actual messages.
Added the list-simple-aliases.pl and create-simple-alias.pl programs for easy alias management from the command line.
Fixed bugs related to renaming autoresponder files when renaming a domain.
Added the Less Antique content style.
Added preview images for content styles, visible via the Preview.. link next to the style menu.