@@ -60,6 +60,7 @@ if ($without) {
 
 if ($multi) {
 	# Show attributes on multiple lines
+	@shells = &get_unix_shells();
 	foreach $d (@doms) {
 		local @users = &list_domain_users($d, 0, 1, 0, 1);
 		local ($duser) = grep { $_->{'user'} eq $d->{'user'} } @users;
@@ -224,6 +225,10 @@ if ($multi) {
 				join(" ", grep { $d->{'limit_'.$_} } @allow_features),"\n";
 			print "    Edit capabilities: ",
 				join(" ", grep { $d->{'edit_'.$_} } @edit_limits),"\n";
+
+			($shell) = grep { $_->[1] eq $duser->{'shell'}} @shells;
+			print "    Shell type: ",
+			      ($shell->[0] || "unknown"),"\n";
 			}
 		}
 	}
